Made the links on the home page stand out more

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="/">Home</a>
+                        <a style="text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;" href="/">Home</a>
                     </li>
                     <li>
-                        <a href="about">About Us</a>
+                        <a style="text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;" href="about">About Us</a>
                     </li>
                 </ul>
             </div>
