--- a/index.html
+++ b/index.html
@@ -63,8 +63,22 @@
         <div class="row">
             <div class="text-block" style="margin-left: 15px;margin-right: 15px;">
                 <p>
-		Hello and welcome to our website.
+		Hello and welcome to our website. We are a philanthropic organization operating in the Bloomington Illinois area.
 		</p
+		
+		<h3>Group Rules</h3>
+		<ul>
+			<li>Be on time</li>
+			<li>Be accountable for your work</li>
+			<li>Be responsive to messaging</li>
+			<li>Be productive during meetings</li>
+			<li>Be professional with organizations</li>
+			<li>Be Respectful to everyon'es ideas</li>
+			<li>Always vote for major decisions</li>
+			<li>Be Prepared for meetings</li>
+		</ul>
+
+		<hr class="large">
 	    </div>			
         </div>
     </div>
