Gosh darn, I need to use a spell checker

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<li>Be responsive to messaging</li>
 			<li>Be productive during meetings</li>
 			<li>Be professional with organizations</li>
-			<li>Be Respectful to everyon'es ideas</li>
+			<li>Be Respectful to everyone's ideas</li>
 			<li>Always vote for major decisions</li>
 			<li>Be Prepared for meetings</li>
 		</ul>
