Added the logo to the website

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
                         <h1>Team Septagon</h1>
-                        <hr class="small">
-                        <span class="subheading"></span>
+			<img border="5px" border-color="black" src="img/cleanLogo.png" width="200px" height="200px"/>
                     </div>
                 </div>
             </div>
