Added Kevin and Josh's new pictures. Started the portfolio on the home page

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
 
 		<tr>
 		<td>
-		<div><img width="275px" height="325px" hspace="10" style="float:left" src="img/face.jpg"/>
+		<div><img width="275px" height="325px" hspace="10" style="float:left" src="img/kevin.jpeg"/>
 		<p>Kevin M. (Treasurer): Hello my name is Kevin Meier and I am a sophomore at Illinois State 
 		University. I am 19 years old and was born and raised in the northwest side of Chicago in 
 		Jefferson Park. I am a Information Systems major and while minoring in Business Administration. 
