--- a/index.html
+++ b/index.html
@@ -63,8 +63,31 @@
             <div class="text-block" style="margin-left: 15px;margin-right: 15px;">
                 <p>
 		Hello and welcome to our website. We are a philanthropic organization operating in the Bloomington Illinois area.
-		</p
 		
+		Our group was formed because of a class for school. For our Communications 223: Small Group Processes class, we are required to form a group, complete a goal, and learn about small group development at the same time.
+
+For our goal, we chose to work with a local non-profit charity, Home Sweet Home Ministries. Home Sweet Home Ministries provides numerous services to the under-served in our community. This group provides a shelter, dining center, pantry, and so much more. 
+
+Our goal was to assist with the 2017 Run For Hope Charity Run, a charity run in which all proceeds go to the charity.</p>
+
+		<div style="text-align:center"><img src="img/RunForHope-2017-logo-final.png" width="550px" height="475px"/></div>
+
+		<h3>Timeline</h3>
+
+		<h4>February 7th</h4>
+
+		Our group was formed! We met one another, came up with a team name, and got started.
+
+		<h4>February 16th</h4>
+
+		We submitted our project proposal.
+
+		<h4>February 22nd</h4>
+
+		We contacted the organization and got the ball rolling.
+
+		
+
 		<h3>Group Rules</h3>
 		<ul>
 			<li>Be on time</li>
