--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ For our goal, we chose to work with a local non-profit charity, Home Sweet Home 
 
 Our goal was to assist with the 2017 Run For Hope Charity Run, a charity run in which all proceeds go to the charity.</p>
 
-		<div style="text-align:center"><img src="img/RunForHope-2017-logo-final.png" width="550px" height="475px"/></div>
+		<div style="text-align:center"><img src="img/RunForHope-2017-logo-final.png" width="40%" height="40%"/></div>
 
 		<h3>Timeline</h3>
 
