I included the new Portfolio section as well as uploaded the original project proposal. The protfolio is what will need to change the most

--- a/about.html
+++ b/about.html
@@ -34,6 +34,9 @@
                     <li>
                         <a style="text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;" href="/">Home</a>
                     </li>
+		    <li>
+                        <a style="text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;" href="portfolio">Portfolio</a>
+                    </li>
                     <li>
                         <a style="text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;" href="about">About Us</a>
                     </li>
@@ -66,7 +69,7 @@
 		<tr>
 		<td>
 		<div><img width="275px" height="325px" hspace="10" style="float:left" src="img/nickf.jpeg"/>
-		<p hspace="10">Nick F. (Webmaster): I'm a senior studying Computer Science. I'm passionate 
+		<p hspace="10">Nick (Webmaster): I'm a senior studying Computer Science. I'm passionate 
 		about programming, math, and information security. I work as an Intern with State 
 		Farm's Information (Cyber) Security Division. There, I develop custom security tools and 
 		software to support our penetration testing teams. My career goal is to help companies 
@@ -77,7 +80,7 @@
 		<tr>
 		<td>
 		<div><img width="275px" height="325px" hspace="10" style="float:left" src="img/john.jpeg"/>
-		<p>John O. (Liaison): I am a junior Computer Science major at Illinois State University. At 44 
+		<p>John (Liaison): I am a junior Computer Science major at Illinois State University. At 44 
 		years old, I decided to reinvigorate / rejuvenate my career.  I work full time at State Farm in 
 		their systems department as a third level team lead, supporting a product that provides telephone 
 		call reporting metrics to business areas.  I have 5 children, all attend the Unit 5 school 
@@ -89,7 +92,7 @@
 		<tr>
 		<td>
 		<div><img width="275px" height="325px" hspace="10" style="float:left" src="img/nathan.jpeg"/>
-		<p>Nathan S. (Recorder): My name is Nathan and I am currently a junior at Illinois State 
+		<p>Nathan (Recorder): My name is Nathan and I am currently a junior at Illinois State 
 		University studying Cyber-Security. I recently transferred this semester to Illinois State from 
 		my local community college, Highland Community College. I grew up on my family farm where I helped 
 		my dad with all our daily chores. I have had previous experience in my community’s Leo Club for 
@@ -99,7 +102,7 @@
 		<tr>
 		<td>
 		<div><img width="275px" height="325px" hspace="10" style="float:left" src="img/kevin.jpeg"/>
-		<p>Kevin M. (Treasurer): Hello my name is Kevin Meier and I am a sophomore at Illinois State 
+		<p>Kevin (Treasurer): Hello my name is Kevin and I am a sophomore at Illinois State 
 		University. I am 19 years old and was born and raised in the northwest side of Chicago in 
 		Jefferson Park. I am a Information Systems major and while minoring in Business Administration. 
 		I enjoy watching all kinds of sports and also love to play when I have the time.</p></div>
@@ -108,7 +111,7 @@
 		<tr>
 		<td>
 		<div><img width="275px" height="325px" hspace="10" style="float:left" src="img/josh.jpeg"/>
-		<p>Josh M. (Recorder): Hello my name is Josh Matchuny I am a junior at Illinois State. I was 
+		<p>Josh (Recorder): Hello my name is Josh I am a junior at Illinois State. I was 
 		born in Louisville Kentucky and raised in Springfield Illinois. I am majoring in computer science 
 		and have previous volunteer experience with meals on wheels in Springfield.</p></div>
 		</td></tr>
@@ -116,7 +119,7 @@
 		<tr>
 		<td>
 		<div><img width="275px" height="325px" hspace="10" style="float:left" src="img/blake.jpeg"/>
-		<p>Blake B. (Treasurer): Hello my name is Blake Behme and I am a junior at Illinois State 
+		<p>Blake (Treasurer): Hello my name is Blake and I am a junior at Illinois State 
 		University majoring in Information Systems. I was born and raised in Morton, Illinois and I am 
 		excited to see what our group will accomplish.</p></div>
 		</td></tr>
@@ -124,7 +127,7 @@
 		<tr>
 		<td>
 		<div><img width="275px" height="325px" hspace="10" style="float:left" src="img/nickd.jpeg"/>
-		<p>Nick D. (Historian): My name is Nick, I was born in Arlington Heights, and recently transferred 
+		<p>Nick (Historian): My name is Nick, I was born in Arlington Heights, and recently transferred 
 		to ISU from Harper College in Palatine, IL. I am an Information Systems Major and plan on 
 		graduating in Spring of 2018. I grew up a very creative person, I love to play music and am in a 
 		band (I’m also producing our album!), I am a part of a YouTube channel, love to draw, and read 
