--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>Team Septagon</h1>
-			<img border="5px" border-color="black" src="img/cleanLogo.png" width="200px" height="200px"/>
+                        <h1>Portfolio</h1>
+                        <hr class="small">
+                        <span class="subheading"></span>
                     </div>
                 </div>
             </div>
@@ -61,33 +62,30 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container" style="margin-top:-50px">
+    <div class="container" style="margin-top:0px">
         <div class="row">
             <div class="text-block" style="margin-left: 15px;margin-right: 15px;">
-		<h3>Team Charter</h3>
-                <p>
-		Hello and welcome to our website. We are a philanthropic organization operating in the Bloomington Illinois area.
+		<h3>Mission Statement</h3>
+		<i>Support, adapt, succeed. Support those in need. Adapt to changing circumstances. Succeed in all pursuits.</i><br><br>
 		
-		Our group was formed because of a class for school. For our Communications 223: Small Group Processes class, we are required to form a group, complete a goal, and learn about small group development at the same time.
+		<div style="text-align:center"><img width="50%" height="50%" src="img/March 2 Meeting.jpg"/></div>
 
-For our goal, we chose to work with a local non-profit charity, Home Sweet Home Ministries. Home Sweet Home Ministries provides numerous services to the under-served in our community. This group provides a shelter, dining center, pantry, and so much more. 
+		<h3>Project Proposal</h3>
+		This link will lead you to our original project proposal (<a style="text-decoration:underline" href="project-proposal">Project Proposal</a>).
 
-Our goal was to assist with the 2017 Run For Hope Charity Run, a charity run in which all proceeds go to the charity.</p>
+               	<h3>Timeline</h3>
 
-		<div style="text-align:center"><img src="img/RunForHope-2017-logo-final.png" width="40%" height="40%"/></div>
+		<h4>February 7th</h4>
 
-		<h3>Group Rules</h3>
-		<ul>
-			<li>Be on time</li>
-			<li>Be accountable for your work</li>
-			<li>Be responsive to messaging</li>
-			<li>Be productive during meetings</li>
-			<li>Be professional with organizations</li>
-			<li>Be Respectful to everyone's ideas</li>
-			<li>Always vote for major decisions</li>
-			<li>Be Prepared for meetings</li>
-		</ul>
+		Our group was formed! We met one another, came up with a team name, and got started.
 
+		<h4>February 16th</h4>
+
+		We submitted our project proposal.
+
+		<h4>February 22nd</h4>
+
+		We contacted the organization and got the ball rolling.
 		<hr class="large">
 	    </div>			
         </div>
