Updated the portfolio as well as uploaded the midterm assessment report. The next goal will be to upload the Agendas and Minutes items

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,19 +73,28 @@
 		<h3>Project Proposal</h3>
 		This link will lead you to our original project proposal (<a style="text-decoration:underline" href="project-proposal">Project Proposal</a>).
 
-               	<h3>Timeline</h3>
+		<h3>Fundraising Site</h3>
+		While it's not fundraising per se, it does provide a lot of information about the event. Please view that link <a style="text-decoration:underline" href="http://www.fleetfeetbloomington.com/races/run-for-hope">here</a>.
 
-		<h4>February 7th</h4>
+		<h3>Original and Revised Goals</h3>
+		<h4>Original</h4>
+		The original idea we had was that we would create a charity run for Home Sweet Home Ministries. We had developed a plan centered around drawing in local businesses as sponsors for the event as well as promoting sign-ups for the event which would further increase charitable donations. We had written up this idea in our <a style="text-decoration:underline" href="project-proposal">Project Proposal</a>, however as we were about to submit that, we came to find out that the Charity Run idea was already being done by Home Sweet Home Ministries. They have an annual charitable run called the "Run for Hope" and 2017 would be the fourth iteration of the event. Unfortunately, due to a lack of time we had to submit this idea with the acknowledgment that we were aware that a similar event was already taking place. Our original SMART goals were as follows. 1. Earn a minimum of $700, 2. Have 100 people participate in our charity run (the original assumption that there was no already-existing run), 3. Every person who signs up before a specific date will get a T-shirt as a part of their registration. These SMART goals would later be revised.
+		<h4>Revised</h4>
+		We had offered in our project proposal to assist with the existing Charity Run and that is exactly what the organization offered us to help with. We made contact with the group who ran the event Fleet Feet Bloomington and spoke with them on ways that they needed assistance. We were happy to learn that our help was needed and that we could help in several different ways. Our revised goal is to increase the number of participants in the race (which increases the amount of charity money HSHM receives) as well as promote the race through local channels. In addition, we took on the role of organizing parking for the event by contacting local businesses to ensure we could use their lots, as well as taking on the role of Traffic Coordinators for the event. As a part of these changes our SMART goals would need to be revised. The first goal could stay the same (every group in the class had this goal), however the second and third would be different. For the second SMART goal we had assumed that this would be the first incarnation of the race, so we set the expected number of participants at 100. Because Run for Hope has averaged around 210ish participants in the past, we decided to increase the goal number of participants to 300. Thus, our second SMART goal was to have 300 participants in the race. For the third goal, we had to change this as well because participants would already receive a T-shirt with their registration. To combat this we needed to come up with a different goal. When looking through historical data from previous races, we had noticed that the number of participants in the age range of 13-25 was remarkably low. Because of this, we set our third SMART goal to increase participation in the age range of 13-25 by 10%. 
 
-		Our group was formed! We met one another, came up with a team name, and got started.
+               	<h3>Original Timeline (Changed by Midterm)</h3>
+		Make contact with organization by February 23rd<br>
+		Start Advertising the event by March 1<br>
+		Get donations from local businesses (be done) by March 22<br>
+		Have shirts finished and shipped by April 10<br>
+		Have the run April 22<br>
 
-		<h4>February 16th</h4>
+		<h3>Agendas and Minutes (As of 3/15)</h3>
+		Updated 3/15
 
-		We submitted our project proposal.
+		<h3>Midterm Assessment Report</h3>
+		This link will lead you to our Midterm Assessment Report (<a style="text-decoration:underline" href="midterm-assessment-report">Midterm Assessment Report</a>).
 
-		<h4>February 22nd</h4>
-
-		We contacted the organization and got the ball rolling.
 		<hr class="large">
 	    </div>			
         </div>
