--- a/project-proposal.html
+++ b/project-proposal.html
@@ -4,8 +4,8 @@
 <head >
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Team Septagon - A philanthropic organization in the Bloomington/Normal Illinois area.">
-    <title>Team Septagon - Home</title>
+	<meta name="description" content="The original Project Proposal from Team Septagon.">
+    <title>Project Proposal</title>
 
     <!-- CSS and Fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
