Added pictures as well as finished the mid-stage of the Portfolio

--- a/meeting-3-minutes.html
+++ b/meeting-3-minutes.html
@@ -94,8 +94,8 @@
     Nick Frichette: Will start to upload our bios to the website.<br>
     Kevin Meier: Bring note taking material.<br>
     Blake Behme: Bring note taking<br>
-    John Owen: Contact 3 organizations about donations and what we could do for the run.<br>
-    Everyone: Think of more ideas for our project if it does not work out for the run.<br><br>
+    John Owen: Contact 3 organizations about donations and what we could do for the run.<br><br>
+    <b>Everyone:</b> Think of more ideas for our project if it does not work out for the run.<br><br>
 
 <b>Adjournment:</b> 6:25 pm<br>
 
