--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,14 @@
 			<a style="text-decoration:underline" href="meeting-6-minutes">Minutes</a><br>
 
 		<h3>Midterm Assessment Report</h3>
-		This link will lead you to our Midterm Assessment Report (<a style="text-decoration:underline" href="midterm-assessment-report">Midterm Assessment Report</a>).
+		This link will lead you to our Midterm Assessment Report (<a style="text-decoration:underline" href="midterm-assessment-report">Midterm Assessment Report</a>).<br>
+
+		<h3>Funds Breakdown</h3>
+		This is the funding contributed by each of our members. The first part counts and promotional value obtained, the second counts as volunteer hours spent. It should be noted that not all fund raising attempts have been completed yet, and many of them are not allowed to be considered.<br>
+		<h3>Promotions</h3>
+		<b>Nick F. [$100+] - </b>Nick reached out to two local radio stations and asked if they could promote the 2017 Run for Hope event on air. Both stations agreed. To see the confirmation emails, please see the following links for each station. Information has been redacted for privacy. <a style="text-decoration:underline" href="img/wzndAgree.png">WZND</a>, and <a style="text-decoration:underline" href="img/wgltAgree.png">WGLT</a>. For valuation information for each station, please see each of the following links. <a style="text-decoration:underline" href="img/wzndVal.png">WZND</a>, because of this information we are valuing the promotions at $100 which is the base package for on air announcements. <a style="text-decoration:underline" href="img/wgltVal.png">WGLT</a>, please note; we are working with the professor to determine a more reasonable value for these promotions. When that information has been determined it will be posted to the site. In addition the event has been submitted to the ISU and WGLT community calendars (awaiting approval from ISU), <a style="text-decoration:underline" href="img/wglt1.png">WGLT-1</a>,  <a style="text-decoration:underline" href="img/wglt2.png">WGLT-2</a>.
+		<h3>Volunteer Hours</h3>
+		We are awaiting the day of the race to log volunteer hours.
 
 		<hr class="large">
 	    </div>			
