--- a/meeting-1-agenda.html
+++ b/meeting-1-agenda.html
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="text-block" style="margin-left: 15px;margin-right: 15px;">
 		<p>
-		<b>Members Present:</b> Nathaniel Stukenberg, Josh Matchuny, Nick Daniels, Nick Frichette, Kevin Meier, Blake Behme, John Owen<br>
+		<b>Members Present:</b> Nathaniel Stukenberg, Josh Matchuny, Nick Daniels, Nick Frichette, Kevin Meier, Blake Behme, John Owen<br><br>
 
 <b>Members Absent:</b> Nobody<br><br>
 
